[package]
name = "raknet-rs"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
authors = ["iGxnon"]
resolver = "2"
description = "Raknet protocol implementation by rust"
homepage = "https://github.com/MemoriesOfTime/raknet-rs"
repository = "https://github.com/MemoriesOfTime/raknet-rs"
readme = "README.md"
categories = ["network-programming"]
keywords = ["raknet", "network", "udp"]

[dependencies]
async-channel = "2.3.1"
bytes = "1"
concurrent-queue = "2.5.0"
futures = "0.3"
futures-async-stream = "0.2"
log = "0.4"
lru = "0.12"
minitrace = "0.6"
parking_lot = "0.12"
pin-project-lite = "0.2"
rand = "0.8"
thiserror = "1"
tokio = { version = "1", features = ["net", "rt"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_futures", "async_tokio"] }
env_logger = "0.11"
indexmap = "2"
reqwest = "0.12"
tokio = { version = "1", features = ["full"] }

# TODO: Remove it when tokio-macros release its new version
[patch.crates-io]
tokio-macros = { git = "https://github.com/tokio-rs/tokio.git", rev = "833ee027d0ec44d88765157ec98b6809f0070169" }

[features]
default = ["tokio-udp"]
tokio-udp = ["dep:tokio"]
micro-bench = []

[[bench]]
name = "micro"
harness = false
required-features = ["micro-bench"]
# TODO: Not available currently
# [[bench]]
# name = "bulk"
# harness = false

[profile.bench]
opt-level = 3
lto = true
