[package]
name = "raknet-rs"
version = "0.1.4"
readme = "README.md"
resolver = "2"
description = "Raknet protocol implementation by rust"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
async-channel = "2.3.1"
bytes = "1"
concurrent-queue = "2.5.0"
fastrace = "0.7.3"
futures = { version = "0.3.5", default-features = false }
futures-async-stream = "0.2"
log = "0.4"
lru = "0.12"
parking_lot = "0.12"
pin-project-lite = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1"
tokio = { version = "1", features = ["net", "rt"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_futures", "async_tokio"] }
env_logger = "0.11"
indexmap = "2"
reqwest = "0.12"
tokio = { version = "1", features = ["full"] }

[features]
default = ["tokio-rt", "serde"]
tokio-rt = ["dep:tokio"]
serde = ["dep:serde"]
micro-bench = []                # for benchmark, do not enable it in normal use

[[bench]]
name = "micro"
harness = false
required-features = ["micro-bench"]

[profile.bench]
opt-level = 3
lto = true
debug = true

[lints]
workspace = true
#
#############################
## workspace configuration ##
#############################
#
[workspace]
members = ["xdp/ebpf", "xdp/raknet-xdp"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["iGxnon"]
homepage = "https://github.com/MemoriesOfTime/raknet-rs"
repository = "https://github.com/MemoriesOfTime/raknet-rs"
categories = ["network-programming"]
keywords = ["raknet", "network", "udp"]

[workspace.lints.rust]
keyword_idents = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
noop_method_call = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"

[workspace.lints.clippy]
cognitive_complexity = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
empty_line_after_outer_attr = "warn"
empty_structs_with_brackets = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
float_equality_without_abs = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
option_if_let_else = "warn"
print_stderr = "warn"
print_stdout = "warn"
semicolon_if_nothing_returned = "warn"
unseparated_literal_suffix = "warn"
shadow_unrelated = "warn"
similar_names = "warn"
suspicious_operation_groupings = "warn"
unused_self = "warn"
use_debug = "warn"
used_underscore_binding = "warn"
useless_let_if_seq = "warn"
wildcard_dependencies = "warn"
wildcard_imports = "warn"
