[package]
name = "ebpf"
version = "0.1.0"
publish = false
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
# These crates are not published so use a git dependency for now. See https://github.com/aya-rs/aya/issues/464
aya-bpf = { git = "https://github.com/aya-rs/aya", tag = "aya-v0.12.0" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", tag = "aya-v0.12.0" }

[features]
default = []
trace = []

[[bin]]
name = "raknet-xdp-ebpf"
path = "src/main.rs"

[lints]
workspace = true
