[package]
name = "raknet-xdp"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
aya = { version = "0.12", default-features = false }

[dev-dependencies]
env_logger = "0.11"

[build-dependencies]
cargo_metadata = "0.18"

[lints]
workspace = true
