[package]
name = "raknet-xdp"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
aya = { version = "0.13", default-features = false }
bitflags = "2"
errno = "0.3"
libc = "0.2"

[dev-dependencies]
env_logger = "0.11"

[build-dependencies]
bindgen = "0.71"
cargo_metadata = "0.19"

[lints]
workspace = true
